# nixify-zelzip

./: .gitignore  Cargo.toml  README.md  README.md.template.nix  TEXTO!!!!.yaml  TODO.md  deny.toml  eslint.config.mts  flake.nix  forja-root-beacon.txt  package.json5  pnpm-lock.yaml  pnpm-workspace.yaml  result  taplo.toml
.config/: hakari.toml
projects/docs+web/: package.json  package.template.json
projects/docs+web/src/: index.md
projects/docs+web/src/.vitepress/: config.mts
projects/docs+web/src/.vitepress/theme/: index.ts  style.css
projects/docs+web/src/niiebla/: niiebla.md  title_ids.md  wad.md
projects/docs+web/src/wiki/: parental-control-master-key-generation-algorithms.md  wiki.md
projects/forja+nix/: apple.fp.nix  checks.fp.nix  default.fp.nix  devShells.fp.nix  files.fp.nix  inputs.fp.nix  pkgs.fp.nix  rust.fp.nix  systems.fp.nix  web.fp.nix
projects/forja+nix/files/: gitignore.fp.nix  npmPackage.fp.nix  readme.fp.nix
projects/forja+nix/files/ignores/: linux.ignore  macos.ignore  nix.ignore  repository.ignore  rust.ignore  web.ignore  windows.ignore
projects/forja+nix/rust/: checks.fp.nix  crane.fp.nix  crane.import.nix  craneLibs.fp.nix  packages.fp.nix  toolchain.fp.nix
projects/forja+nix/web/: checks.fp.nix  packages.fp.nix  webLib.import.nix
projects/forja_cli+rust/: Cargo.toml  TODO.md
projects/forja_cli+rust/src/: cli.rs  forja_cli.rs  root_path.rs  todo.rs
projects/forja_cli+rust/src/todo/: comment_block.rs  inline_todo_entry.rs  resource.rs
projects/icebrk+rust/: Cargo.toml  README.md  README.md.template.nix  TODO.md
projects/icebrk+rust/src/: icebrk.rs  v0.rs  v1.rs  v2.rs  v3.rs
projects/icebrk_web+web/: TODO.md  astro.config.mjs  astro.config.mts  package.json  package.json5  package.template.json5  tsconfig.json
projects/icebrk_web+web/src/: types.d.ts
projects/icebrk_web+web/src/components/: DateSelector.astro  Footer.astro  Header.astro  MasterKeyGeneratorForm.astro  PlatformSelector.astro
projects/icebrk_web+web/src/layouts/: Base.astro
projects/icebrk_web+web/src/pages/: index.astro
projects/niiebla+rust/: Cargo.toml  README.md  README.md.template.nix  TODO.md
projects/niiebla+rust/src/: certificate_chain.rs  niiebla.rs  signed_blob_header.rs  ticket.rs  title_id.rs  title_metadata.rs  wad.rs  wii_common_key.rs
projects/niiebla+rust/src/ticket/: v1.rs
projects/niiebla+rust/src/title_metadata/: content_selector.rs
projects/niiebla+rust/src/wad/: installable.rs
projects/niiebla+rust/src/wad/installable/: certificate_chain.rs  content.rs  ticket.rs  title_metadata.rs
projects/util+rust/: Cargo.toml  README.md  README.md.template.nix  TODO.md
projects/util+rust/src/: aes.rs  extensions.rs  logging.rs  macros.rs  recall_view.rs  stream_pin.rs  util.rs  view.rs
projects/util+rust/src/extensions/: read.rs  string.rs  write.rs
projects/util+rust/src/view/tests/: read.rs  seek_end.rs  seek_relative.rs  seek_start.rs  write.rs
projects/workspace_hack+rust/: Cargo.toml  build.rs
projects/workspace_hack+rust/src/: lib.rs
