[package]
version = "0.3.0"

name = "zelzip_forja_cli"
description = "Management tool for the build system of the ZELZIP monorepo."

publish = false

authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "forja"
path = "src/forja_cli.rs"

[dependencies]
clap.workspace = true
cmd_lib.workspace = true
color-eyre.workspace = true
tracing.workspace = true
util.workspace = true
walkdir.workspace = true
zelzip_workspace_hack = { version = "0.1", path = "../workspace_hack+rust" }

[lints]
workspace = true
